# raylib-elfscript

./: .gitignore  CMakeLists.txt  README.md
assets/: main.cs  script_stub.cs
assets/3d/appletree/: appletree.mtl
assets/core/: delta_time.cs  delta_time_usingObject.cs
assets/modules/: BatchTest.cs  DeltaTime.cs  Eyes.cs  Lights.cs  RenderMap.cs  TerrainDemo.cs  blank.cs  gridtest.cs  looptest.cs  shapes_starfield_batch.cs  shapes_starfield_effect.cs  shapes_starfield_effect_v1.cs  shapes_starfield_nativ.cs  textures_background_scrolling.cs  textures_mouse_painting.cs
assets/shaders/custom/: sun.frag
assets/test/: hello.cs  test.elf
demo/: CMakeLists.txt  build_web.sh
demo/assets/: main.cs  main.elf  script_stub.cs  script_stub.elf
demo/assets/core/: basic_window.cs  delta_time.cs  delta_time_usingObject.elf
demo/assets/modules/: DeltaTime.elf  Eyes.elf  RenderMap.elf  TerrainDemo.elf  lights_script.cs  lights_script.elf  looptest.elf  models_first_person_maze.elf  shapes_starfield_effect.cs  textures_mouse_painting.elf  textures_sprite_animation.cs
demo/assets/music/: LICENSE.md
demo/assets/shaders/custom/: sun.vert
demo/assets/test/: hello.cs  hello.elf  test.elf
demo/src/: ConsoleGuiObject.cpp  main.cpp  torqueConfig.h
demo/src/dk/: dk_console.h  dk_ui.h
docu/: ElfObjects.md
lib/ElfScript_v0dot1/: ElfScript.cmake  README.md  README_old.md  StringAndVector.cmake
lib/ElfScript_v0dot1/addons/console/: consoleDocExporter.cpp
lib/ElfScript_v0dot1/addons/shellConsole/: POSIXConsole.cpp  POSIXStdConsole.h
lib/ElfScript_v0dot1/console/: arrayObject.cpp  console.cpp  console.h  consoleDoc.cpp  consoleExtras.cpp  consoleExtras.h  consoleFunctions.cpp  consoleInternal.cpp  consoleInternal.h  consoleObject.cpp  consoleObject.h  consoleTypes.cpp  consoleTypes.h  consoleValueStack.h  engineAPI.h  engineDoc.cpp  engineObject.cpp  enginePrimitives.cpp  enginePrimitives.h  engineStructs.cpp  engineStructs.h  fileSystemFunctions.cpp  propertyParsing.cpp  propertyParsing.h  runtimeClassRep.h  script.h  scriptFilename.cpp  scriptFilename.h  scriptObjects.cpp  scriptObjects.h  scriptPreprocessor.cpp  scriptPreprocessor.h  sim.cpp  sim.h  simBase.h  simDictionary.cpp  simDictionary.h  simEvents.cpp  simEvents.h  simFieldDictionary.h  (+7 more)
lib/ElfScript_v0dot1/console/torquescript/: CMDscan.cpp  ast.h  astAlloc.cpp  astNodes.cpp  codeBlock.cpp  codeBlock.h  compiledEval.cpp  compiler.cpp  compiler.h  runtime.cpp
lib/ElfScript_v0dot1/core/: dataChunker.h  elfWrapper.cpp  elfWrapper.h  frameAllocator.cpp  frameAllocator.h  stringTable.cpp  volume.cpp
lib/ElfScript_v0dot1/core/stream/: bitStream.h  stream.cpp
lib/ElfScript_v0dot1/core/strings/: README.md  String.cpp  String.h  stringFunctions.cpp  stringTable.cpp  stringUnit.cpp  unicode.cpp
lib/ElfScript_v0dot1/core/util/: refBase.h  str.cpp  str.h  tVector.cpp
lib/ElfScript_v0dot1/core/util/journal/: journal.h  process.cpp
lib/ElfScript_v0dot1/core/util/messaging/: message.cpp  message.h
lib/ElfScript_v0dot1/demo/: demoMain.cpp  test.cs  test2.cs  testObj.cpp  torqueConfig.h
lib/ElfScript_v0dot1/main/: engineGlue.cpp  engineGlue.h
lib/ElfScript_v0dot1/math/: mConsoleFunctions.cpp  mConstants.h  mMathFn.h  mMathRand.h
lib/ElfScript_v0dot1/platform/: platform.h  platformFileIO.cpp  platformIntrinsics.gcc.h  platformMemory.cpp  platformVolume.cpp  platformVolume.h  types.gcc.h  types.h
lib/ElfScript_v0dot1/platform/posix/: posixVolume.cpp
lib/ElfScript_v0dot1/platform/stub/: platformAssert.cpp  platformProcess.cpp
lib/ElfScript_v0dot1/platform/win/: winVolume.cpp
lib/dk/: dk_console.h  dk_ui.h  readme.md
lib/ohmflux/grid/: basicgrid.cpp  basicgrid.h  tBinaryHeap.h
lib/rayspice/: raygui_custom.h  rini_custom.h
src/: ConsoleTypes.cpp  ConsoleTypes.h  defaultMain.cpp  elfAudio.cpp  elfBase.cpp  elfCamera.cpp  elfCamera.h  elfCore.cpp  elfEnum.cpp  elfFile.cpp  elfModels.cpp  elfRayMath.cpp  elfResource.cpp  elfResource.h  elfShader.cpp  elfShapes.cpp  elfTextures.cpp  elfTools.h  main.cpp  platformProcess.cpp  raylib-elfscript.cmake  torqueConfig.h
src/gui/: ConsoleGuiObject.cpp  Gui.cpp
src/interface/: ConsoleTypes.cpp  ConsoleTypes.h  defaultMain.cpp  elfAudio.cpp  elfBase.cpp  elfBatchRender.cpp  elfCamera.cpp  elfCore.cpp  elfDrawing.cpp  elfEnum.cpp  elfFile.cpp  elfImageResource.cpp  elfLights.cpp  elfModels.cpp  elfObjects.cpp  elfObjects.h  elfRayMath.cpp  elfResource.cpp  elfResource.h  elfShader.cpp  elfShapes.cpp  elfStorage.h  elfText.cpp  elfTextures.cpp  platformProcess.cc  platformProcess.cpp
src/objects/: BatchRender.cpp  Grid.cpp  Grid.h  LightObject.cpp  Model.cpp  Terrain.cpp  _skel.cpp  starfield.cpp
src/objects/3D/: ModelObject.cpp  SceneContainer.cpp  SceneContainer.h  SceneObject.cpp  SceneObject.h  TerrainObject.cpp
src/objects/gui/: ConsoleGuiObject.cpp  Gui.h
tools/: cc2ts.py
tools/testing/: cc2elf.py  transpiler.py
